# dense-and-sparse

./: .gitignore  .gitmodules  Makefile  README.md  dense_mode.py  pyproject.toml  requirements.txt
scripts/: collector4teachable.py
sparse_to_dense/: __init__.py
sparse_to_dense/app/: home.py
sparse_to_dense/app/pages/: 1_data_flywheel.py  1_human_in_the_loop.py  2_sparse_labeling.py  3_dense_labeling.py  4_metadata_tagging.py
sparse_to_dense/cli/: web.py
sparse_to_dense/core/: manager.py
sparse_to_dense/dense/: main.py
sparse_to_dense/sparse/: main.py
sparse_to_dense/sparse/utils/: labeling.py  splitting.py
src/: app.py  copyutils.py  labeling.py  main.py  manager.py  metadata.py  timing.py  veditutils.py
src/core/: timing.py
src/dense/: main.py
src/sparse/: labeling.py  main.py  manager.py  veditutils.py
src/sparse/utils/: labeling.py  splitting.py
